# squarbo_gazebo

./: README.md  package.xml  setup.cfg  setup.py
launch/: spawn_squarbo.launch.py
src/squarbo_gazebo/: spawner_squarbo.py
