<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>squarbo_gazebo</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="borgesjvt@email.com">João Victor Torres Borges</maintainer>
  <license>TODO</license>

  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>squarbo_description</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
